--- a/404.html
+++ b/404.html
@@ -394,6 +394,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/maclachlan-2019-genetic/">Genetic Programming Hyper-Heuristics with Vehicle Collaboration for Uncertain Capacitated Arc Routing Problems</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/huang-2019-fast/">A fast parallel genetic programming framework with adaptively weighted primitives for symbolic regression</a></li>
   </ul>
   
@@ -407,10 +411,6 @@
   
   <ul>
     <li><a href="/publication/masood-2019-genetic/">Genetic Programming with Pareto Local Search for Many-Objective Job Shop Scheduling</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/karunakaran-2019-multitasking/">Multitasking Genetic Programming for Stochastic Team Orienteering Problem with Time Windows</a></li>
   </ul>
   
   
