--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,7 +18,23 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="huang2019fast">1</a>]
+[<a name="maclachlan2019genetic">1</a>]
+</td>
+<td class="bibtexitem">
+Jordan MacLachlan, Yi&nbsp;Mei, Juergen Branke, and Mengjie Zhang.
+ Genetic programming hyper-heuristics with vehicle collaboration for
+  uncertain capacitated arc routing problems.
+ <em>Evolutionary Computation</em>, nov 2019.
+[&nbsp;<a href="publication-accepted_bib.html#maclachlan2019genetic">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="huang2019fast">2</a>]
 </td>
 <td class="bibtexitem">
 Zhixing Huang, Jinghui Zhong, Liang Feng, Yi&nbsp;Mei, and Wentong Cai.
@@ -34,7 +50,7 @@ Zhixing Huang, Jinghui Zhong, Liang Feng, Yi&nbsp;Mei, and Wentong Cai.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="wang2019two">2</a>]
+[<a name="wang2019two">3</a>]
 </td>
 <td class="bibtexitem">
 Shaolin Wang, Yi&nbsp;Mei, Park John, and Mengjie Zhang.
@@ -51,7 +67,7 @@ Shaolin Wang, Yi&nbsp;Mei, Park John, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="wang2019evolving">3</a>]
+[<a name="wang2019evolving">4</a>]
 </td>
 <td class="bibtexitem">
 Shaolin Wang, Yi&nbsp;Mei, Park John, and Mengjie Zhang.
@@ -68,7 +84,7 @@ Shaolin Wang, Yi&nbsp;Mei, Park John, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="karunakaran2019multitasking">4</a>]
+[<a name="karunakaran2019multitasking">5</a>]
 </td>
 <td class="bibtexitem">
 Deepak Karunakaran, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -85,7 +101,7 @@ Deepak Karunakaran, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="masood2019genetic">5</a>]
+[<a name="masood2019genetic">6</a>]
 </td>
 <td class="bibtexitem">
 Atiya Masood, Gang Chen, Yi&nbsp;Mei, Harith Al-Sahaf, and Mengjie Zhang.
