--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,19 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="huang2019fast"></a><pre>
+<h1>publication-accepted.bib</h1><a name="maclachlan2019genetic"></a><pre>
+@article{<a href="publication-accepted.html#maclachlan2019genetic">maclachlan2019genetic</a>,
+  title = {Genetic Programming Hyper-Heuristics with Vehicle Collaboration for Uncertain Capacitated Arc Routing Problems},
+  author = {MacLachlan, Jordan and Mei, Yi and Branke, Juergen and Zhang, Mengjie},
+  journal = {Evolutionary Computation},
+  month = {nov},
+  year = {2019},
+  publisher = {MIT Press},
+  doi = {}
+}
+</pre>
+
+<a name="huang2019fast"></a><pre>
 @article{<a href="publication-accepted.html#huang2019fast">huang2019fast</a>,
   title = {A fast parallel genetic programming framework with adaptively weighted primitives for symbolic regression},
   author = {Huang, Zhixing and Zhong, Jinghui and Feng, Liang and Mei, Yi and Cai, Wentong},
