--- a/index.html
+++ b/index.html
@@ -543,8 +543,8 @@
 <h3 id="news">NEWS</h3>
 
 <ul>
-<li><font color="red"><strong>[PhD Vacancy]</strong></font> I am looking for PhD/MSc/Honours/Summer Research students in <strong>Evolutionary Computation and Machine Learning for Scheduling and Combinatorial Optimisation</strong>. If you have similar research interests with me, please do not hesitate to <a href="#contact">contact</a> me.
-<!-- - <font color="red">**[Call for papers]**</font> We are organising [**IEEE Symposium on Evolutionary scheduling and combinatorial optimisation (IEEE ESCO)**](http://ssci2019.org/esco.html). Submission due date: **~~July 10~~<font color="red">August 1</font>, 2019**. --></li>
+<li><font color="red"><strong>[PhD Vacancy]</strong></font> I am looking for PhD/MSc/Honours/Summer Research students in <strong>Evolutionary Computation and Machine Learning for Scheduling and Combinatorial Optimisation</strong>. If you have similar research interests with me, please do not hesitate to <a href="#contact">contact</a> me.</li>
+<li><font color="red"><strong>[Call for papers]</strong></font> We are organising <strong><a href="/cec2020-esco/">The Special Session on Evolutionary Scheduling and Combinatorial Optimisation</a> at <a href="https://wcci2020.org">IEEE Congress on Evolutionary Computation (CEC) 2020</a></strong>. Submission due date: <strong>Jan 15, 2020</strong>.</li>
 </ul>
 
 <h3 id="biography">Biography</h3>
