--- a/reviewers/index.html
+++ b/reviewers/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content=" IEEE Transactions on Evolutionary Computation (ARC/CORE Tier A*) Evolutionary Computation Journal (ARC/CORE Tier A) IEEE Transactions on Cybernetics (ARC/CORE Tier A) (Outstanding Reviewer 2018) European Journal of Operational Research (ARC/CORE Tier A) Swarm and Evolutionary Computation Future Generation Computer Systems (ARC/CORE Tier A) Transportation Research Part C (ARC Tier A) Transportation Research Part D Journal of Heuristics Waste Management Computers &amp; Industrial Engineering IEEE Transactions on Services Computing IEEE/CAA Journal of Automatica Sinica Information Sciences Applied Soft Computing (Outstanding Reviewer 2015, 2017) Robotics and Computer-Integrated Manufacturing Complexity Mathematical Problems in Engineering Swarm Intelligence Genetic Programming and Evolvable Machines Engineering Applications of Artificial Intelligence Journal of Information Technology &amp; Software Engineering Journal of Scheduling Applied Sciences Soft Computing Complex &amp; Intelligent Systems Computational Intelligence and Neuroscience Computational Optimization and Applications NeuroComputing Memetic Computing Journal of Industrial and Production Engineering Journal of Computer Science and Technology Natural Computing EURASIP Journal on Wireless Communications and Networking PLOS ONE Journal Frontiers in Computer Science Frontier of Engineering Management  ">
+  <meta name="description" content=" IEEE Transactions on Evolutionary Computation, IEEE (ARC/CORE Tier A*, Q1) Evolutionary Computation Journal, MIT Press (ARC/CORE Tier A, Q1) IEEE Transactions on Cybernetics, IEEE (ARC/CORE Tier A, Q1) (Outstanding Reviewer 2018) European Journal of Operational Research, Elsevier (ARC/CORE Tier A, Q1) Swarm and Evolutionary Computation, Elsevier (Q1) Future Generation Computer Systems, Elsevier (ARC/CORE Tier A, Q1) Transportation Research Part C, Elsevier (Q1) Transportation Research Part D, Elsevier (Q1) Waste Management, Elsevier (Q1) Computers &amp; Industrial Engineering, Elsevier (Q1) IEEE Transactions on Services Computing, IEEE (Q1) IEEE/CAA Journal of Automatica Sinica Information Sciences, Elsevier (ARC/CORE Tier A, Q1) Applied Soft Computing, Elsevier (Q1) (Outstanding Reviewer 2015, 2017) Engineering Applications of Artificial Intelligence, Elsevier (Q1) Robotics and Computer-Integrated Manufacturing, Elsevier (Q1) NeuroComputing, Elsevier (Q1) Journal of Scheduling, Springer (Q1) Journal of Heuristics, Springer Complexity, Hindawi (Q1) Mathematical Problems in Engineering, Hindawi Swarm Intelligence, Springer Genetic Programming and Evolvable Machines, Springer Journal of Information Technology &amp; Software Engineering Applied Sciences Soft Computing Complex &amp; Intelligent Systems Computational Intelligence and Neuroscience Computational Optimization and Applications Memetic Computing Journal of Industrial and Production Engineering Journal of Computer Science and Technology Natural Computing EURASIP Journal on Wireless Communications and Networking PLOS ONE Journal Frontiers in Computer Science Frontier of Engineering Management  ">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/reviewers/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/reviewers/">
   <meta property="og:title" content="Journal Reviewer | Yi Mei @ VUW">
-  <meta property="og:description" content=" IEEE Transactions on Evolutionary Computation (ARC/CORE Tier A*) Evolutionary Computation Journal (ARC/CORE Tier A) IEEE Transactions on Cybernetics (ARC/CORE Tier A) (Outstanding Reviewer 2018) European Journal of Operational Research (ARC/CORE Tier A) Swarm and Evolutionary Computation Future Generation Computer Systems (ARC/CORE Tier A) Transportation Research Part C (ARC Tier A) Transportation Research Part D Journal of Heuristics Waste Management Computers &amp; Industrial Engineering IEEE Transactions on Services Computing IEEE/CAA Journal of Automatica Sinica Information Sciences Applied Soft Computing (Outstanding Reviewer 2015, 2017) Robotics and Computer-Integrated Manufacturing Complexity Mathematical Problems in Engineering Swarm Intelligence Genetic Programming and Evolvable Machines Engineering Applications of Artificial Intelligence Journal of Information Technology &amp; Software Engineering Journal of Scheduling Applied Sciences Soft Computing Complex &amp; Intelligent Systems Computational Intelligence and Neuroscience Computational Optimization and Applications NeuroComputing Memetic Computing Journal of Industrial and Production Engineering Journal of Computer Science and Technology Natural Computing EURASIP Journal on Wireless Communications and Networking PLOS ONE Journal Frontiers in Computer Science Frontier of Engineering Management  "><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content=" IEEE Transactions on Evolutionary Computation, IEEE (ARC/CORE Tier A*, Q1) Evolutionary Computation Journal, MIT Press (ARC/CORE Tier A, Q1) IEEE Transactions on Cybernetics, IEEE (ARC/CORE Tier A, Q1) (Outstanding Reviewer 2018) European Journal of Operational Research, Elsevier (ARC/CORE Tier A, Q1) Swarm and Evolutionary Computation, Elsevier (Q1) Future Generation Computer Systems, Elsevier (ARC/CORE Tier A, Q1) Transportation Research Part C, Elsevier (Q1) Transportation Research Part D, Elsevier (Q1) Waste Management, Elsevier (Q1) Computers &amp; Industrial Engineering, Elsevier (Q1) IEEE Transactions on Services Computing, IEEE (Q1) IEEE/CAA Journal of Automatica Sinica Information Sciences, Elsevier (ARC/CORE Tier A, Q1) Applied Soft Computing, Elsevier (Q1) (Outstanding Reviewer 2015, 2017) Engineering Applications of Artificial Intelligence, Elsevier (Q1) Robotics and Computer-Integrated Manufacturing, Elsevier (Q1) NeuroComputing, Elsevier (Q1) Journal of Scheduling, Springer (Q1) Journal of Heuristics, Springer Complexity, Hindawi (Q1) Mathematical Problems in Engineering, Hindawi Swarm Intelligence, Springer Genetic Programming and Evolvable Machines, Springer Journal of Information Technology &amp; Software Engineering Applied Sciences Soft Computing Complex &amp; Intelligent Systems Computational Intelligence and Neuroscience Computational Optimization and Applications Memetic Computing Journal of Industrial and Production Engineering Journal of Computer Science and Technology Natural Computing EURASIP Journal on Wireless Communications and Networking PLOS ONE Journal Frontiers in Computer Science Frontier of Engineering Management  "><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -503,35 +503,35 @@
 
     <div class="article-style" itemprop="articleBody">
       <ul>
-<li><a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=4235">IEEE Transactions on Evolutionary Computation</a> <strong>(ARC/CORE Tier A*)</strong></li>
-<li><a href="http://www.mitpressjournals.org/loi/evco">Evolutionary Computation Journal</a> <strong>(ARC/CORE Tier A)</strong></li>
-<li><a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6221036">IEEE Transactions on Cybernetics</a> <strong>(ARC/CORE Tier A)</strong> (<i>Outstanding Reviewer 2018</i>)</li>
-<li><a href="http://www.journals.elsevier.com/european-journal-of-operational-research/">European Journal of Operational Research</a> <strong>(ARC/CORE Tier A)</strong></li>
-<li><a href="https://www.journals.elsevier.com/swarm-and-evolutionary-computation">Swarm and Evolutionary Computation</a></li>
-<li><a href="https://www.journals.elsevier.com/future-generation-computer-systems">Future Generation Computer Systems</a> <strong>(ARC/CORE Tier A)</strong></li>
-<li><a href="http://www.journals.elsevier.com/transportation-research-part-c-emerging-technologies/">Transportation Research Part C</a> <strong>(ARC Tier A)</strong></li>
-<li><a href="http://www.journals.elsevier.com/transportation-research-part-d-transport-and-environment/">Transportation Research Part D</a></li>
-<li><a href="http://www.springer.com/mathematics/applications/journal/10732">Journal of Heuristics</a></li>
-<li><a href="https://www.journals.elsevier.com/waste-management">Waste Management</a></li>
-<li><a href="https://www.journals.elsevier.com/computers-and-industrial-engineering">Computers &amp; Industrial Engineering</a></li>
-<li><a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=4629386">IEEE Transactions on Services Computing</a></li>
+<li><a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=4235">IEEE Transactions on Evolutionary Computation</a>, IEEE <strong>(ARC/CORE Tier A*, Q1)</strong></li>
+<li><a href="http://www.mitpressjournals.org/loi/evco">Evolutionary Computation Journal</a>, MIT Press <strong>(ARC/CORE Tier A, Q1)</strong></li>
+<li><a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6221036">IEEE Transactions on Cybernetics</a>, IEEE <strong>(ARC/CORE Tier A, Q1)</strong> (<i>Outstanding Reviewer 2018</i>)</li>
+<li><a href="http://www.journals.elsevier.com/european-journal-of-operational-research/">European Journal of Operational Research</a>, Elsevier <strong>(ARC/CORE Tier A, Q1)</strong></li>
+<li><a href="https://www.journals.elsevier.com/swarm-and-evolutionary-computation">Swarm and Evolutionary Computation</a>, Elsevier <strong>(Q1)</strong></li>
+<li><a href="https://www.journals.elsevier.com/future-generation-computer-systems">Future Generation Computer Systems</a>, Elsevier <strong>(ARC/CORE Tier A, Q1)</strong></li>
+<li><a href="http://www.journals.elsevier.com/transportation-research-part-c-emerging-technologies/">Transportation Research Part C</a>, Elsevier <strong>(Q1)</strong></li>
+<li><a href="http://www.journals.elsevier.com/transportation-research-part-d-transport-and-environment/">Transportation Research Part D</a>, Elsevier <strong>(Q1)</strong></li>
+<li><a href="https://www.journals.elsevier.com/waste-management">Waste Management</a>, Elsevier <strong>(Q1)</strong></li>
+<li><a href="https://www.journals.elsevier.com/computers-and-industrial-engineering">Computers &amp; Industrial Engineering</a>, Elsevier <strong>(Q1)</strong></li>
+<li><a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=4629386">IEEE Transactions on Services Computing</a>, IEEE <strong>(Q1)</strong></li>
 <li><a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6570654">IEEE/CAA Journal of Automatica Sinica</a></li>
-<li><a href="http://www.journals.elsevier.com/information-sciences/">Information Sciences</a></li>
-<li><a href="http://www.journals.elsevier.com/applied-soft-computing/">Applied Soft Computing</a> (<i>Outstanding Reviewer 2015, 2017</i>)</li>
-<li><a href="https://www.journals.elsevier.com/robotics-and-computer-integrated-manufacturing">Robotics and Computer-Integrated Manufacturing</a></li>
-<li><a href="https://www.hindawi.com/journals/complexity/">Complexity</a></li>
-<li><a href="https://www.hindawi.com/journals/mpe/">Mathematical Problems in Engineering</a></li>
-<li><a href="http://link.springer.com/journal/11721">Swarm Intelligence</a></li>
-<li><a href="http://www.springer.com/computer/ai/journal/10710">Genetic Programming and Evolvable Machines</a></li>
-<li><a href="http://www.journals.elsevier.com/engineering-applications-of-artificial-intelligence/">Engineering Applications of Artificial Intelligence</a></li>
+<li><a href="http://www.journals.elsevier.com/information-sciences/">Information Sciences</a>, Elsevier <strong>(ARC/CORE Tier A, Q1)</strong></li>
+<li><a href="http://www.journals.elsevier.com/applied-soft-computing/">Applied Soft Computing</a>, Elsevier <strong>(Q1)</strong> (<i>Outstanding Reviewer 2015, 2017</i>)</li>
+<li><a href="http://www.journals.elsevier.com/engineering-applications-of-artificial-intelligence/">Engineering Applications of Artificial Intelligence</a>, Elsevier <strong>(Q1)</strong></li>
+<li><a href="https://www.journals.elsevier.com/robotics-and-computer-integrated-manufacturing">Robotics and Computer-Integrated Manufacturing</a>, Elsevier <strong>(Q1)</strong></li>
+<li><a href="http://www.journals.elsevier.com/neurocomputing/">NeuroComputing</a>, Elsevier <strong>(Q1)</strong></li>
+<li><a href="http://link.springer.com/journal/10951">Journal of Scheduling</a>, Springer <strong>(Q1)</strong></li>
+<li><a href="http://www.springer.com/mathematics/applications/journal/10732">Journal of Heuristics</a>, Springer</li>
+<li><a href="https://www.hindawi.com/journals/complexity/">Complexity</a>, Hindawi <strong>(Q1)</strong></li>
+<li><a href="https://www.hindawi.com/journals/mpe/">Mathematical Problems in Engineering</a>, Hindawi</li>
+<li><a href="http://link.springer.com/journal/11721">Swarm Intelligence</a>, Springer</li>
+<li><a href="http://www.springer.com/computer/ai/journal/10710">Genetic Programming and Evolvable Machines</a>, Springer</li>
 <li><a href="http://www.omicsgroup.org/journals/information-technology-software-engineering.php">Journal of Information Technology &amp; Software Engineering</a></li>
-<li><a href="http://link.springer.com/journal/10951">Journal of Scheduling</a></li>
 <li><a href="http://www.mdpi.com/journal/applsci">Applied Sciences</a></li>
 <li><a href="http://www.springer.com/engineering/computational+intelligence+and+complexity/journal/500">Soft Computing</a></li>
 <li><a href="http://www.springer.com/engineering/computational+intelligence+and+complexity/journal/40747">Complex &amp; Intelligent Systems</a></li>
 <li><a href="https://www.hindawi.com/journals/cin/">Computational Intelligence and Neuroscience</a></li>
 <li><a href="http://www.springer.com/mathematics/journal/10589">Computational Optimization and Applications</a></li>
-<li><a href="http://www.journals.elsevier.com/neurocomputing/">NeuroComputing</a></li>
 <li><a href="http://link.springer.com/journal/12293">Memetic Computing</a></li>
 <li><a href="http://www.tandfonline.com/toc/tjci21/current">Journal of Industrial and Production Engineering</a></li>
 <li><a href="http://jcst.ict.ac.cn:8080/jcst/EN/volumn/home.shtml">Journal of Computer Science and Technology</a></li>
