--- a/publication/index.html
+++ b/publication/index.html
@@ -1408,6 +1408,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/jackson-2020-genetic/jackson-2020-genetic.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -1763,6 +1767,10 @@
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/wang-2020-multi/wang-2020-multi.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
