--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -519,10 +519,10 @@
 <li>2020/04/22, <strong><a href="https://ecs.victoria.ac.nz/Main/GradSoheilaSadeghiram">Soheila Sadeghiram</a></strong>, A User-Preference Driven Lexicographic Approach for Multi-Objective Web Service Composition</li>
 <li>2020/04/15, <strong>Guanqiang Gao</strong>, memetic algorithm for multi-robot task allocation</li>
 <li>2020/04/08, <strong><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a></strong>, survey on noisy evolutionary computation.</li>
-<li>2020/04/01, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a>, research objectives for PhD proposals, part 3</li>
+<li>2020/04/01, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a></strong>, research objectives for PhD proposals, part 3</li>
 <li>2020/03/25, <strong><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></strong>, TPDS paper</li>
-<li>2020/03/18, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a>, research objectives for PhD proposals, part 2</li>
-<li>2020/03/11, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a>, research objectives for PhD proposals</li>
+<li>2020/03/18, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a></strong>, research objectives for PhD proposals, part 2</li>
+<li>2020/03/11, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a></strong>, research objectives for PhD proposals</li>
 <li>2020/03/04, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMahdiAbdollahi">Mahdi Abdollahi</a></strong>, ontology-based data augmentation for medical text classification</li>
 <li>2020/02/26, <strong><a href="https://ecs.victoria.ac.nz/Main/GradGuiyingHuang">Victoria Huang</a></strong>, multi-agent reinforcement learning for online network controller scheduling</li>
 <li>2020/02/19, <strong><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></strong>, multi-objective genetic programming for evolving routing policies for uncertain arc routing.</li>
