--- a/ecco/index.html
+++ b/ecco/index.html
@@ -520,6 +520,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <li><a href="http://ecs.victoria.ac.nz/Main/HuiMa">Dr. Hui Ma</a>: Evolutionary Resource Allocation, Web Service Composition, Cloud Computing</li>
 <li><a href="http://ecs.victoria.ac.nz/Main/AaronChen">Dr. Aaron Chen</a>: Reinforcement Learning, NeuroEvolution (NEAT), Evolutionary Computation for Games, Evolutionary Scheduling</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/YahuiJia">Dr. Yahui Jia</a>: Evolutionary Combinatorial Optimisation, Large-Scale Optimisation</li>
+<li><a href="https://fangfang-zhang.github.io">Dr. Fangfang Zhang</a>: Evolutionary Scheduling, Hyper-heuristics, Genetic Programming, Multi-task Optimisation</li>
 <li><a href="https://ecs.wgtn.ac.nz/Main/MohammadNekooei">Mohammad Nekooei</a>: Machine learning and fuzzy logic for network scheduling</li>
 <li><a href="https://www.victoria.ac.nz/som/about/staff/vipul-jain">Dr. Vipul Jain</a>: Supply Chain Management, Operations Research</li>
 <li><a href="https://evoscheduling.wordpress.com/">Dr. Su Nguyen (La Trobe University, Australia)</a>: Evolutionary Scheduling and Combinatorial Optimisation, Hyper-heuristics, Genetic Programming</li>
@@ -542,7 +543,6 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <li><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></li>
 <li><a href="https://ecs.wgtn.ac.nz/Main/GradMengXu">Meng Xu</a></li>
 <li><a href="https://ecs.wgtn.ac.nz/Main/GradYifanYang">Yifan Yang</a></li>
-<li><a href="http://ecs.victoria.ac.nz/Main/GradFangfangZhang">Fangfang Zhang</a></li>
 </ul>
 
 <h4 id="alumni">Alumni</h4>
